# threads

./: .clang-format  .gitignore  CMakeCache_tmp.txt  CMakeLists.txt  PyPI_README.md  README.md  README_PyPI.md  RELEASE_NOTES.md  bench_compare.py  bench_multiply.py  example.py  example_2.py  pyproject.toml  setup-pre-commit.sh  setup.py  simulate_threads.py  start_env.sh  test_visit_clades.py  tmp.py
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build-cpp-libs.yml  build-wheels.yml  ctest-macos.yml  ctest-ubuntu.yml  draft-test.yml  pytest-ubuntu.yml  regen-snapshot-data.yml  run_tests_python.yml
Notes/Fleeting/: 20220727_age_of_closest_cousin_segments.ipynb  age_ccs_formula.nb  dating_segments.tex
cmake/: CompilerWarnings.cmake  ProjectSettings.cmake  Sanitisers.cmake  StaticAnalysers.cmake
docs/: cli.rst  conf.py  index.rst  optimize_branch_changes.md  quickstart.rst  requirements.txt
docs/api/: instructions.rst  io.rst  multiply.rst  serialization.rst  traversals.rst  utils.rst
documents/technical_writeup/: rle_multiply.tex  visit_clades_algorithms.tex
example/: example_data.bim  example_data.map  example_data.pgen
examples/: arg.py  deletion.py  demography.py  fastls.py  hmm.py  io.py  mut_thread.py  prune.py
examples/example_data/: seq_data.sample
resources/demographies/: ACB.demo  ASW.demo  BEB.demo  CDX.demo  CEU.demo  CHB.demo  CHS.demo  CLM.demo  ESN.demo  FIN.demo  GBR.demo  GIH.demo  GWD.demo  IBS.demo  ITU.demo  JPT.demo  KHV.demo  LWK.demo  MSL.demo  MXL.demo  Ne10000.demo  PEL.demo  PJL.demo  PUR.demo  README.md  STU.demo  TSI.demo  YRI.demo
scripts/: threads
src/: AlleleAges.cpp  AlleleAges.hpp  CMakeLists.txt  DPBWT.cpp  DPBWT.hpp  DataConsistency.cpp  DataConsistency.hpp  Demography.cpp  Demography.hpp  ForwardBackward.cpp  ForwardBackward.hpp  GenotypeIterator.cpp  GenotypeIterator.hpp  Gnode.cpp  Gnode.hpp  HMM.cpp  HMM.hpp  ImputationMatcher.cpp  ImputationMatcher.hpp  Matcher.cpp  Matcher.hpp  Node.cpp  Node.hpp  Shuttle.cpp  Shuttle.hpp  State.cpp  State.hpp  TDPBWT  TDPBWT.cpp  TDPBWT_pybind.cpp  TGEN.cpp  TGEN.hpp  TgenSegment.hpp  ThreadingInstructions.cpp  ThreadingInstructions.hpp  Threads.cpp  Threads.hpp  ThreadsFastLS.cpp  ThreadsFastLS.hpp  ThreadsIO.cpp  (+19 more)
src/threads_arg/: __init__.py  __main__.py  allele_ages.py  convert.py  data_consistency.py  fwbw.py  impute.py  infer.py  map_mutations_to_arg.py  mapping_utils.py  normalization.py  pgen_util.py  phase.py  serialization.py  threads_to_pgen.py  threads_to_vcf.py  utils.py
test/: CMakeLists.txt  bench_compression_multiply.py  bench_impute.py  bench_impute_scaling.py  bench_simplify.py  build_cache.py  regen_snapshot_data.py  snapshot_runners.py  test_allele_ages.py  test_benchmark.cpp  test_burn_in.py  test_convert.py  test_data_snapshot.py  test_demography.cpp  test_demography_correctness.cpp  test_diploid.py  test_hmm.cpp  test_impute_correctness.py  test_impute_snapshot.py  test_infer.py  test_instructions.py  test_map.py  test_matcher.cpp  test_multiply.py  test_mutation_compression.py  test_node.cpp  test_normalization.py  test_regression.cpp  test_regression.py  test_shuttle.py  test_tgen.py  test_threading_instructions.cpp  test_threading_instructions.py  test_utils.py  test_vcf.py  test_viterbi_lowmem.cpp  test_viterbi_state.cpp
test/data/: CEU_unscaled.demo  N250.bim  N250.fam  N250.pgen  arg.argn  arg_consistent.argn  arg_consistent.threads  demography.demo  expected_N250.argn  expected_N250.threads  expected_convert_fit_to_data_snapshot.argn  expected_convert_snapshot.argn  expected_impute_snapshot.vcf  expected_infer_fit_to_data_snapshot.threads  expected_infer_snapshot.threads  expected_mapping_snapshot.mut  gmap_02.map  gmap_04.map  impute_expected.vcf  imputed.vcf  mutations.mut  panel.pgen  panel.psam  panel.pvar  panel.samples  panel.vcf.gz.csi  reference.argn  reference.threads  target.samples  target.vcf.gz.csi
