[build-system]
requires = ["scikit-build-core>=0.9.5", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "threads-arg"
version = "0.1.0"
description = "Highly scalable inference of ancestral recombination graphs (ARGs)"
readme = "README_PyPI.md"
authors = [
    { name = "Threads Developers" }
]
requires-python = ">=3.9"

dependencies = [
    "click",
    "xarray",
    "h5py",
    "pandas",
    "numba",
    "numpy",
    "tszip",
    "arg-needle-lib==1.1.2",
    "cyvcf2",
    "ray",
    "pgenlib",
    "tqdm"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.scripts]
threads = "threads_arg.__main__:main"

[tool.scikit-build]
cmake.args = [
    "-DBUILD_PYTHON_MODULE=ON",
    "-DENABLE_TESTING=OFF",
    "-DMAKE_DOCS=OFF"
]
cmake.verbose = true
cmake.build-type = "Release"
