[build-system]
requires = [
    "scikit-build-core>=0.10.5",
    "pybind11"
]
build-backend = "scikit_build_core.build"

[project]
name = "threads-arg"
version = "0.2.1"
dynamic = ["readme"]
description = "Highly scalable inference of ancestral recombination graphs (ARGs)"
authors = [
    { name = "Threads Developers" }
]
requires-python = ">=3.9"

dependencies = [
    "click",
    "xarray",
    "h5py",
    "pandas",
    "numba",
    "numpy",
    "tszip",
    "arg-needle-lib==1.2.1",
    "cyvcf2",
    "ray",
    "pgenlib",
    "tqdm"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.scripts]
threads = "threads_arg.__main__:main"

[tool.scikit-build]
cmake.args = [
    "-DBUILD_PYTHON_MODULE=ON",
    "-DENABLE_TESTING=OFF",
    "-DMAKE_DOCS=OFF"
]
cmake.verbose = true
cmake.build-type = "Release"

metadata.readme.provider = "scikit_build_core.metadata.fancy_pypi_readme"
[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README_PyPI.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "RELEASE_NOTES.md"